# example-useralejs-plugin-with-playwright

./: Makefile  README.md  anomaly.ipynb  config.py  env.example  main.py  pyproject.toml  requirements.txt  test-userale-plugin.py
bot/: __init__.py  config.py  main.py  run.py
bot/lib/: const.py  plugin.py  run.py  types.py  utils.py  workflow.py
bot/workflows/: __init__.py  github.py  github_anomalous.py  github_normal.py  superset.py  utils.py
notebooks/: anomaly.ipynb
src/: __init__.py  run.py  types.py
src/lib/: plugin.py  utils.py  workflow.py
src/lib/__tests__/: test_plugin.py
src/workflows/: __init__.py  github_anomalous.py  github_normal.py  utils.py
src/workflows/__tests__/: test_workflow_utils.py
tests/: test_lib_utils.py  test_parse_args.py  test_plugin.py  test_run.py  test_workflow_utils.py
