[tool.poetry]
name = "useralejs-playwright-bot"
version = "0.1.0"
description = "Playwright bot instrumented with UseraleJS"
authors = ["Evan Jones <ejones@arlis.umd.edu>"]
license = "Apache-2.0"
packages = [{ include = "bot", from = "." }]

[tool.poetry.dependencies]
python = ">=3.10"
colorama = "0.4.6"
python-dotenv = "1.0.1 "
playwright = "^1.18.1"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
